# prompts

./: .aider.conf.yml  .cleanup_manifest.json  .clinerules  .cursorrules  .dockerignore  .env.example  .eval_checkpoint.json  .flake8  .gitignore  .mailmap  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  AGENTS.md  ANALYSIS.md  CANDIDATE_FILES_FOR_REMOVAL.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_STANDARDIZATION_SUMMARY.md  CONTRIBUTING.md  CoVE Reflexion Prompt Library Evaluation.md  Dockerfile  Dockerfile.ui  EVALUATION_PROMPT.md  Enterprise AI Prompt Library - Complete Deployment Guide (1).md  GEMINI.md  HelloTool1.cs  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_2025-11-18.md  LICENSE  MIGRATION_SUMMARY.md  MODERNIZATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  REFACTORING_PLAN.md  REPO_DOCUMENTS.md  REPO_MANIFEST.json  RESTRUCTURE_PLAN.md  REVIEW.md  Run-Tools-Ecosystem-Eval.cmd  (+86 more)
agentic-v2-eval/: .coverage  LICENSE  README.md  chatlg.md  pyproject.toml
agentic-v2-eval/scripts/: run_coverage.sh
agentic-v2-eval/tests/: conftest.py  test_adapters.py  test_benchmarks.py  test_datasets_bridge.py  test_eval.py  test_metrics.py  test_pattern_evaluator.py  test_quality_evaluator.py  test_reporters.py  test_rubrics.py  test_sandbox.py  verify_p2.py
agentic-workflows-v2/: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MASTER_MANIFEST.md  MCP_IMPLEMENTATION_COMPLETE.md  MCP_IMPLEMENTATION_PLAN.md  MCP_IMPLEMENTATION_STATUS.md  PHASE0_SUMMARY.md  README.md  SECURITY.md  SUPPORT.md  TEST_SUMMARY.md  dev.sh  handoff.md  manifest.json  mcp_memory.json  orchestrator_iter_1.parsed.json  orchestrator_iter_1.raw.txt  orchestrator_iter_2.parsed.json  orchestrator_iter_2.raw.txt  orchestrator_iter_3.parsed.json  orchestrator_iter_3.raw.txt  orchestrator_iter_4.parsed.json  orchestrator_iter_4.raw.txt  orchestrator_iter_5.parsed.json  orchestrator_iter_5.raw.txt  orchestrator_iter_6.raw.txt  orchestrator_iter_8.parsed.json  package-lock.json  pyproject.toml  requirements_analysis.json  requirements_analysis.raw.txt  tmpclaude-7dc0-cwd  verify_benchmark_integration.py
agentic-workflows-v2/.github/: PULL_REQUEST_TEMPLATE.md
agentic-workflows-v2/agentic_v2/: __init__.py  feature_flags.py  settings.py
agentic-workflows-v2/docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  DOCS_BEST_PRACTICES.md  EVALUATION_MIGRATION_PLAN.md  IMPLEMENTATION_PLAN_V1_COMPLETE.md  IMPLEMENTATION_PLAN_V2.md  LANGCHAIN_MIGRATION_PLAN.md  NODE_CONFIG_OVERLAY.md  PHASE2D_SUMMARY.md  README.md  REPO_MAP.md  SUBAGENTS.md  WORKFLOWS.md  a11y-focus-ring-audit.md
agentic-workflows-v2/examples/: README.md  custom_tool.py  mcp_config_example.json  mcp_integration_example.py  simple_agent.py  workflow_run.py  yaml_workflow.py
agentic-workflows-v2/feature_package/: README.md  handoff.md  manifest.json
agentic-workflows-v2/fixtures/: README.md  example_code_review_run.json  multi_agent_codegen_e2e_input.json
agentic-workflows-v2/runs/: 20260207T210355Z_code_review_success.json  20260207T212642Z_fullstack_generation_success.json  20260207T213721Z_code_review_success.json  20260207T214037Z_code_review_success.json  20260207T214941Z_fullstack_generation_success.json  20260207T215736Z_fullstack_generation_success.json  20260207T222859Z_code_review_success.json  20260207T223216Z_code_review_success.json  20260207T223314Z_fullstack_generation_success.json  20260208T050514Z_code_review_success.json  20260208T050655Z_fullstack_generation_success.json  20260208T050849Z_fullstack_generation_success.json  20260208T051554Z_code_review_success.json  20260208T051818Z_fullstack_generation_success.json  20260208T051919Z_fullstack_generation_success.json  20260208T052019Z_fullstack_generation_success.json  20260208T052106Z_code_review_success.json  20260208T052147Z_code_review_success.json  20260208T060421Z_fullstack_generation_success.json  20260208T060422Z_code_review_success.json  20260208T213333Z_fullstack_generation_success.json  20260208T213356Z_fullstack_generation_success.json  20260208T213419Z_fullstack_generation_success.json  20260208T213425Z_fullstack_generation_success.json  agentic_v2.sqlite3
agentic-workflows-v2/scripts/: add_module_docstrings.py  check_docs_refs.py  generate_schemas.py  generate_ts_types.py  load_all_to_db.py  query_db.py  restart-dev.ps1  run-bounded-rereview.ps1  run-deep-research.ps1  run-tests.ps1  run_coverage.sh  run_deep_research.py  setup-dev.ps1  start-dev.ps1  status-dev.ps1  stop-dev.ps1  sync_catalog_to_db.py  test_sentinel_e2e.py  validate_db_roundtrip.py
agentic-workflows-v2/tests/: __init__.py  conftest.py  test_adapter_conformance.py  test_adapter_registry.py  test_agent_resolver.py  test_agents.py  test_agents_integration.py  test_agents_orchestrator.py  test_artifact_extractor.py  test_attempt_artifacts.py  test_auth.py  test_ci_calculator.py  test_cli.py  test_cli_adapter.py  test_code_execution.py  test_context_ops.py  test_contracts.py  test_contracts_sanitization.py  test_core_protocols.py  test_cross_tier_and_protocol.py  test_dag.py  test_dag_executor.py  test_dataset_workflows.py  test_engine.py  test_evaluation_scoring.py  test_event_wire_format.py  test_execution_hardening.py  test_expressions.py  test_feature_flags.py  test_golden_workflow.py  test_injection_detector.py  test_integrations_base.py  test_integrations_langchain.py  test_integrations_otel.py  test_iterative.py  test_langchain_adapter.py  test_langchain_bridge.py  test_langchain_config.py  test_langchain_dependency_guards.py  test_langchain_deprecation.py  (+65 more)
agentic-workflows-v2/ui/: README.md  UI-IMPROVEMENTS-SUMMARY.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tmpclaude-f8e7-cwd  tsconfig.json  vite.config.ts  (+2 more)
multiagent-workflows/: 1  README.md  WORKFLOW_IMPLEMENTATION_GRADING.md  fullstack_workflow.mermaid  ollama_models.txt  payload.json  pyproject.toml  requirements.txt  run_payload.json  run_real_benchmarks.py  run_workflow_cloud.py  run_workflow_test.py  test_input.json  test_output.json
(+2601 files in other folders)
