[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-workflows-v2"
version = "0.1.0"
description = "Tier-based multi-model AI workflow orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "jinja2>=3.0",
    "jmespath>=1.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "aiohttp>=3.9",
    "typer>=0.9",
    "rich>=13.0",
    "langchain-core>=0.3",
    "langgraph>=0.2",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "python-multipart>=0.0.6",
]
langchain = [
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-ollama>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langsmith>=0.1.0",
]
tracing = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
claude = [
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1",
]

[project.scripts]
agentic = "agentic_v2.cli:main"


[tool.hatch.build.targets.wheel]
packages = ["agentic_v2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that call real agents/LLMs (deselect with -m 'not integration')",
    "slow: tests taking more than 5 seconds",
    "security: security-related tests",
]

[tool.coverage.run]
branch = true
source = ["agentic_v2"]

[tool.coverage.report]
fail_under = 80
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "raise NotImplementedError",
]
