[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-workflows-v2"
version = "0.1.0"
description = "Tier-based multi-model AI workflow orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0,<3",
    "httpx>=0.25,<1",
    "jinja2>=3.0,<4",
    "jmespath>=1.0,<2",
    "pyyaml>=6.0,<7",
    "aiofiles>=23.0,<25",
    "aiohttp>=3.9,<4",
    "typer>=0.9,<1",
    "rich>=13.0,<14",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.2",
    "black>=23.0",
    "ruff>=0.1.0",
]
server = [
    "fastapi>=0.100,<1",
    "uvicorn>=0.23,<1",
    "python-multipart>=0.0.6,<1",
]
langchain = [
    "langchain-core>=0.3,<0.4",
    "langgraph>=0.2,<0.3",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langchain-anthropic>=0.2,<0.3",
    "langchain-google-genai>=2.0,<3",
    "langchain-ollama>=0.2,<0.3",
    "langgraph-checkpoint-sqlite>=2.0,<3",
    "langsmith>=0.1.0,<0.4",
]
tracing = [
    "opentelemetry-sdk>=1.20,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.20,<2",
]
claude = [
    "anthropic>=0.40,<1",
    "claude-agent-sdk>=0.1,<1",
]
rag = [
    "lancedb>=0.15,<1",
    "litellm>=1.50,<2",
]

[project.scripts]
agentic = "agentic_v2.cli:main"


[tool.hatch.build.targets.wheel]
packages = ["agentic_v2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that call real agents/LLMs (deselect with -m 'not integration')",
    "slow: tests taking more than 5 seconds",
    "security: security-related tests",
]

[tool.coverage.run]
branch = true
source = ["agentic_v2"]

[tool.coverage.report]
fail_under = 80
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "raise NotImplementedError",
]
