[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-workflows-v2"
version = "0.1.0"
description = "Tier-based multi-model AI workflow orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0,<3",
    "httpx>=0.25,<1",
    "jinja2>=3.1.6,<4",
    "jmespath>=1.0,<2",
    "pyyaml>=6.0,<7",
    "aiofiles>=23.0,<25",
    "aiohttp>=3.9,<4",
    "filelock>=3.0,<4",
    "typer>=0.9,<1",
    "rich>=13.0,<14",
    "prompts-tools",
]

[tool.uv.sources]
prompts-tools = { workspace = true }


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.2",
    "black>=23.0",
    "ruff>=0.1.0",
]
server = [
    "fastapi>=0.100,<1",
    "uvicorn>=0.23,<1",
    "python-multipart>=0.0.6,<1",
]
langchain = [
    "langchain-core>=0.3,<0.4",
    "langgraph>=0.2,<0.3",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langchain-anthropic>=0.2,<0.3",
    "langchain-google-genai>=2.0,<3",
    "langchain-ollama>=0.2,<0.3",
    "langgraph-checkpoint-sqlite>=2.0,<3",
    "langsmith>=0.1.0,<0.4",
]
tracing = [
    "opentelemetry-sdk>=1.20,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.20,<2",
]
claude = [
    "anthropic>=0.40,<1",
    "claude-agent-sdk>=0.1,<1",
]
rag = [
    "lancedb>=0.15,<1",
    "litellm>=1.50,<2",
]

[project.scripts]
agentic = "agentic_v2.cli:main"


[tool.hatch.build]
exclude = [".venv*", "ui/node_modules"]

[tool.hatch.build.targets.wheel]
packages = ["agentic_v2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that call real agents/LLMs (deselect with -m 'not integration')",
    "slow: tests taking more than 5 seconds",
    "security: security-related tests",
]

[tool.coverage.run]
branch = true
source = ["agentic_v2"]

[tool.coverage.report]
fail_under = 80
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "raise NotImplementedError",
]

# ---------------------------------------------------------------------------
# Ruff linting configuration
# ---------------------------------------------------------------------------
[tool.ruff.lint]
# Rule sets:
#   E/W  - pycodestyle errors and warnings
#   F    - Pyflakes (undefined names, unused imports)
#   I    - isort (import ordering)
#   N    - pep8-naming
#   UP   - pyupgrade (modernise Python syntax)
#   S    - flake8-bandit (security)
#   B    - flake8-bugbear (likely bugs and design issues)
#   A    - flake8-builtins (shadowing builtins)
#   C4   - flake8-comprehensions (simplify comprehensions)
#   SIM  - flake8-simplify
#   TCH  - flake8-type-checking (TYPE_CHECKING guards)
#   RUF  - Ruff-native rules
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH", "RUF"]

ignore = [
    # -------------------------------------------------------------------------
    # Originally requested suppressions
    # -------------------------------------------------------------------------

    # S101: Use of `assert` — asserts are idiomatic in test code and guard
    #       clauses; suppressed globally because S101 fires in production
    #       guard-clauses too.  Test-specific S101 is also listed under
    #       per-file-ignores for clarity.
    "S101",
    # S105: Hardcoded password string — too many false positives on test
    #       fixtures and placeholder config values (e.g. "secret", "token").
    #       Review real secrets via pre-commit detect-secrets instead.
    "S105",
    # S603: subprocess call — the codebase has intentional shell_ops.py
    #       wrappers; those are reviewed manually.
    #       TODO Sprint C: audit each S603 site and replace with safer
    #       alternatives where possible.
    "S603",
    # S607: Starting a process with a partial executable path — same rationale
    #       as S603; shell_ops wrappers already validate paths.
    #       TODO Sprint C: add which() resolution to all shell_ops callsites.
    "S607",
    # UP007: Use `X | Y` for Union — codebase still uses Optional[X] and
    #        Union[X, Y] in many places for clarity and shared-module compat.
    #        TODO Sprint C: migrate all Union/Optional annotations to PEP 604.
    "UP007",

    # -------------------------------------------------------------------------
    # High-volume violations (>20 hits) — deferred to Sprint C bulk migration
    # -------------------------------------------------------------------------

    # UP045 (264 violations): `Optional[X]` → `X | None` — same PEP 604
    #   migration as UP007; addressing both together avoids a half-finished
    #   annotation pass.
    #   TODO Sprint C: run `ruff check --fix --select UP045` then review diffs.
    "UP045",
    # E501 (118 violations): line-too-long (>88 chars) — majority are long
    #   string literals, URLs in comments, and auto-generated docstrings that
    #   cannot be auto-fixed without semantic review.
    #   TODO Sprint C: reformat manually where wrapping improves readability;
    #   leave URL-only lines alone (add `# noqa: E501` per-line).
    "E501",
    # I001 (74 violations): unsorted imports — pre-commit isort hook should
    #   handle this, but the hook was added after many files were written.
    #   TODO Sprint C: run `ruff check --fix --select I001` in a dedicated
    #   formatting commit so the diff is reviewable.
    "I001",
    # UP017 (66 violations): `datetime.timezone.utc` → `datetime.UTC` —
    #   datetime.UTC was introduced in Python 3.11; safe to migrate but the
    #   change touches ~20 files and warrants a dedicated commit.
    #   TODO Sprint C: run `ruff check --fix --select UP017`.
    "UP017",
    # F401 (48 violations): unused imports — some are intentional re-exports
    #   (public API surface in __init__.py files); cannot be bulk-fixed without
    #   checking each site.
    #   TODO Sprint C: audit file-by-file; add `__all__` to re-export modules,
    #   remove genuinely unused imports.
    "F401",
    # TC001 (43 violations): typing-only first-party imports not inside
    #   TYPE_CHECKING block — requires adding `if TYPE_CHECKING:` guards and
    #   quoting the affected annotations throughout the codebase.
    #   TODO Sprint C: enable TC001 after wrapping imports; verify no circular
    #   import regressions.
    "TC001",
    # UP037 (41 violations): quoted annotations (string literals used as type
    #   hints) — fixable by either adding `from __future__ import annotations`
    #   or de-quoting; strategy should be uniform across the package.
    #   TODO Sprint C: decide on PEP 563 vs. PEP 649 strategy, then apply.
    "UP037",
    # UP035 (32 violations): deprecated typing imports (`typing.List`,
    #   `typing.Dict`, etc.) — migrate to built-in generics (`list`, `dict`).
    #   Overlaps with UP006/UP007 migration; best done in one combined pass.
    #   TODO Sprint C: run `ruff check --fix --select UP035,UP006`.
    "UP035",
    # C420 (29 violations): unnecessary dict comprehension for an iterable
    #   (use `dict(...)` or `{k: v for ...}` → `dict.fromkeys(...)`).
    #   Auto-fixable but produces semantically identical code; safe to defer.
    #   TODO Sprint C: run `ruff check --fix --select C420`.
    "C420",
    # RUF022: unsorted `__all__` — the codebase intentionally groups __all__
    #   entries by logical category (phases, feature domains) rather than
    #   alphabetically; sorting would destroy semantic organization.
    "RUF022",
]

# ---------------------------------------------------------------------------
# Per-file overrides
# ---------------------------------------------------------------------------
[tool.ruff.lint.per-file-ignores]
# Tests legitimately use assert statements (S101), hardcoded credential strings
# in fixtures (S105), and occasionally hardcoded passwords for mock objects (S106).
"tests/**/*.py" = ["S101", "S105", "S106"]

# ---------------------------------------------------------------------------
# isort configuration (via ruff's I rule set)
# ---------------------------------------------------------------------------
[tool.ruff.lint.isort]
known-first-party = ["agentic_v2"]

# ---------------------------------------------------------------------------
# Mypy static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
# Exclude test suite and example scripts — these are not part of the
# production type surface and would generate enormous noise.
exclude = ["tests/", "examples/"]
