[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent-workflows"
version = "0.1.0"
description = "Multi-agent development workflows with evaluation framework integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Prompts Repository Team"}
]
keywords = ["multi-agent", "llm", "workflow", "evaluation", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "datasets>=2.14.0",
]

[project.optional-dependencies]
local = [
    "onnxruntime-genai>=0.3.0",
]
ollama = [
    "ollama>=0.1.0",
]
cloud = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "google-generativeai>=0.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = [
    "multiagent-workflows[local,ollama,cloud,dev]",
]

[project.scripts]
multiagent = "multiagent_workflows.cli:main"

[project.urls]
Repository = "https://github.com/your-org/prompts"
Documentation = "https://github.com/your-org/prompts/tree/main/multiagent-workflows"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
multiagent_workflows = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = ["E501"]
